# ELF-AnalysisTool

./: .gitignore  LICENSE  README
elf-analyzer/: CMakeLists.txt  main.c  main.cpp
elf-analyzer/include/: ELFParser.hpp  IElfComponentParser.hpp  elf_parser.h
elf-analyzer/include/parsers/: ElfHeaderParser.hpp  elf_header.h  section_header.h
elf-analyzer/src/: ElfParser.cpp  elf_parser.c
elf-analyzer/src/parsers/: ElfHeaderParser.cpp  elf_header.c  program_header.c  section_header.c
elf-analyzer/test/: output.json
elf_analyzer/: CMakeLists.txt
elf_analyzer/include/parsers/: dynamic_segment.h  program_header.h  relocation_table.h  symbol_table.h
elf_analyzer/src/: elf_parser.c
elf_analyzer/src/parsers/: dynamic_segment.c  elf_header.c  relocation_table.c  relocation_table.h  section_header.c  symbol_table.c
elf_analyzer/test/: 1_Simple_Cpp_Program  1_Simple_Cpp_Program.cpp
elf_web/: manage.py
elf_web/elf_web/: asgi.py  settings.py  urls.py
elf_webserver/: basedir.txt
elf_webserver/elf_analysistool/: apps.py  urls.py  views.py
elf_webserver/elf_web/: settings.py  urls.py  wsgi.py
elf_webserver/static/: styles-start.css  styles.css
elf_webserver/templates/: base.html  footer.html  header.html  index.html  start.html  upload.html
